# backlog-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/docs/: pr-review-notes.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.plans/: 001-get-epic-with-tasks.md  002-cross-mcp-improvements.md  003-workflow-tools.md  libsql-migration.md
convex/: functions.ts  schema.ts
docs/: README.md  architecture.md  patterns.md
plans/: README.md
src/backlog_mcp/: __init__.py  server.py
tests/: test_server.py
