[project]
name = "backlog-mcp"
version = "0.1.0"
description = "Backlog MCP server - Single-task loading for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
backlog-mcp = "backlog_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backlog_mcp"]
